tests/baselines/reference/parserES5ForOfStatement4.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement4.ts(1,10): error TS1190: The variable declaration of a 'for...of' statement cannot have an initializer.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement4.ts (1 errors) ====
    for (var a = 1 of X) {
             ~
!!! error TS1190: The variable declaration of a 'for...of' statement cannot have an initializer.
    }